--- a/oleg-sivokon.tex
+++ b/oleg-sivokon.tex
@@ -1,4 +1,4 @@
-% Created 2014-12-02 Tue 23:35
+% Created 2014-12-08 Mon 09:28
 \documentclass[oneside]{memoir}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -85,52 +85,47 @@ Email: & \href{mailto:olegsivokon@gmail.com}{olegsivokon@gmail.com}\\
 Address: & Florentin 50, Tel Aviv, Israel\\
 \end{tabular}
 \end{center}
+
+\emph{You can find an up-to-date electronic copy of this document at}
+\url{https://github.com/wvxvw/resume}
 \chapter{Introduction}
 \label{sec-2}
 I put free-form introduction before any historical data because I believe it
-can better describe me.  I think so because the largest part of my programming
-career I dedicated to the technology from which I would like to depart now.  A
-historical reference would have made me a disservice thus.
+can better describe me.  I dedicated almost ten years of my programming career
+to the technology, from which I would like to depart now.  Thus, I don't want
+to be judged on the merits of my past.
 
-I'm looking to transition to Python.  I've written some Python code earlier,
+I'm looking to transition to Python.  I've written some Python code before,
 but never an industrial-scale project.  In order to teach myself the language,
 I developed a module for SCons build tool for compiling ActionScript code.
 I've also taken online courses in machine learning and artificial intelligence
-which used Python language to illustrate the algorithms involved.  Later, I
-wrote several utility programs for managing testing environment, used Python
-as a language for illustration of conceptual bits of a plan in a project
-specification and other minor tasks.  Eventually I familiarized myself with
-Twisted, Tornado and Django frameworks, but it would be unfair to say I'm an
-expert.  I'm a casual user at best, but I'm willing to improve.
+which used Python to illustrate the algorithms involved.  Later, I wrote
+several utility programs for managing testing environment, used Python as a
+language for illustration of conceptual bits of a plan in a project
+specification and other minor tasks.  Eventually I used Twisted, Tornado and
+Django frameworks, but it would be unfair to say I'm an expert.  I'm a casual
+user at best, but I'm willing to improve.
 
 At the time of this writing, it's been almost ten years since I wrote my first
 program.  Most of this time I devoted to Adobe's technologies, Flash, Flex,
 and ActionScript.  But it wasn't until about five years ago, when, after an
-introduction to free software ideology I started to distance myself from this
-technology and the general state of mind associated with it.  I made my first
-steps in Flash world largely due to the community support.  I was a big fan of
-one online role-play game, where I was promoted to a moderator and later
-become a tester.  Seeing how community was crucial to improvement and
-refinement of the knowledge gathered around the technology, I happily
-contributed back.  At first, I engaged with FlashDevelop project.  I wrote
-several plugins for it that would allow one to handle resource linking in a
-more automated way and adds some auto-completion goodies.
+introduction to free software ideology I started to distance myself from
+Flash.  I made my first steps in Flash world largely due to the community
+support, learning through on-line resources, in cooperation with people like
+myself: passionate armatures.
 
-FlashDevelop was and still is an MS Windows-only program due to a range of
-components with platform-dependent code.  At some point the developers looked
-at the possibility of running FD on Mac and Linux.  I become interested in
-Linux port because, in part, I saw this as an opportunity for contribution.
-Unfortunately, porting FD proved to be infeasible in a sensible time-frame,
-but this introduced me to Linux environment.  I hesitated for about a year,
-but once I've developed enough understanding of the system to get by in my
-daily life, I switched to Linux and never looked back.
+I become a Linux user due to the community effort.  Aside of programming, I
+dabble a little bit in philosophy, especially, I'm interested in moral
+philosophy, which for me is both personal and very important.  So you can
+imagine that I'm a kind of an ``ideological'' Linux zealot.  One that usually
+writes GNU/Linux, where others write Linux.
 
 For a while I tried to make ActionScript programming on Linux more tolerable,
 but seeing how this is an exercise in futility and because I found better
 friends in the Linux world, I gradually gave up the hope.  I tried switching
 to Haxe, a free programming language that, beside other things, targets Flash
 platform, but quite soon I began to realize that it was a kind of a toy
-language, and I lost my interest.
+language, and I lost interest.
 
 My first editor in Linux was Vim.  But I never really learned it enough to
 feel comfortable with it.  At the time I didn't know where to look for help or
@@ -146,38 +141,36 @@ $\mathrel{
 \hspace{0.2cm} \hrulefill
 
 Perhaps, if you ever played role-play games, this will not surprise you: many
-players and developers alike have a dream of an ultimate best game ever they
-will create.  For me the dream was about the NPC (non-player characters) AI.
-The kind of ``choose your own adventure'' game, with no fixed rules, the plot
-unfolding unpredictably, no canned boring hunting quests and infinitely
-scriptable and customizable game mechanics.  This is where my passion for AI
-starts.
+players and developers alike have a dream of an ultimate best game they will
+create.  For me the dream was about the NPC (non-player characters) AI.  The
+kind of ``choose your own adventure'' game, with no fixed rules, the plot
+unfolding unpredictably, boring hunting quests replaced by infinitely
+customizable game mechanics.  This is where my passion for AI starts.
 
-Being a hobbyist programmer, as most ActionScript programmers are, I didn't
-know where to start.  Purely by chance I happened on the article in Wikipedia
-talking about SHRDLU.  It had a link to the original sources written in Mac
-Lisp (I guess, or some other ancient dialect of Lisp), which were entirely
-opaque to me.  Never mind that at the time, as any hobbyist programmer I
-couldn't even imagine how much effort it will take to even understand the
-sources.  I only realized that the program was a toy and a dead-end years
-hence, after I've abandoned my initial efforts.
+Purely by chance I read a Wikipedia article about SHRDLU.  It had a link to
+the original sources written in Mac Lisp (I guess, or some other ancient Lisp
+dialect), which were entirely opaque to me.  At the time I couldn't even
+imagine how much effort it will take to even understand the sources.  I only
+realized that the program was a toy and a dead-end years hence, after I've
+abandoned my initial efforts.
 
 Anyways, this is how I got into the world of Lisp and Emacs.  Of course I made
 all the silly mistakes the Lisp novice would have made.  I couldn't tell the
 difference between Emacs Lisp, Common Lisp and Scheme.  This is how I ended up
 using Common Lisp.  Even though today I understand that Scheme would've been a
 better choice, this choice stuck.  Common Lisp was my first ``serious''
-language.  I could write some Java or C\# before then.  Eventually even used
-PHP to make small changes to the forum admin system.  But this was a whole
-different story!  This was the language that was made the way it was not to
-match the wishes of the marketing department or to collect more karma points
-in a user-board discussion.  It was made this way because there were deep
-reasons for any programming language to be that way.  There are only so many
-languages which can say the same about themselves, while still being
-commercially useful.  Haskell or Miranda and some descendants of ML would be
-other examples. Forth and J are completely different languages, but they share
-the same spirit.  Prolog is the same way too.  Of course there are more, but
-I'll spare you the whole list.
+language.  I could write some Java or C\# before, eventually, I poked around
+PHP forum admin system.  But Lisp was a whole different story!  This was the
+language that was made the way it was because any self-respecting language
+would have to make all the same choices.  It is, as if you compared Kantian
+imperative to the regulations in a medieval cloister.  It was made by people
+who wanted to do things the (only) right way there is.  Well, imagine my
+excitement.
+
+There are only so many languages which can say the same about themselves.
+Haskell and some descendants of ML would be other examples. Forth and J are
+completely different languages, but they share the same spirit.  Prolog is the
+same way too.  Of course there are more, but I'll spare you the whole list.
 
 At first I didn't like Emacs.  It took me about half a year to try again.  But
 the effort of learning it is the one which I will never regret.  This has
@@ -186,49 +179,18 @@ between software and humans, the goals which both may achieve.  I felt once
 again behind the school desk when I read through the documentation and the
 source code.  I used Eclipse quite a bit before it, obviously, FlashDevelop
 and Visual Studio.  But this was so much different, and, well, better, so that
-today I feel like the computer is broken if it doesn't have Emacs in it,
-making it virtually worthless for me.
+today I feel like the computer is broken if it doesn't have Emacs in it.
 
-After I began to make progress with Lisp, I, at last, started to connect
-different bits of programming I knew intuitively before, but more than that, I
-realized that I barely scratched the surface of what programming has to offer.
-This was the time I decided I need to go back to academia to get better
-understanding of relevant mathematics, but with every step I made it kept
-unfolding into more and more unexpected ways.  Right now I'm again a first
-year student in Open University, math faculty.
-
-After I felt at home with Common Lisp, I decided to look around for other
-interesting languages.  Haskell was the obvious first choice.  But I have to
-confess that category theory and type theory, which are the core concepts
-behind the language are really hard for me, and I rarely could get behind the
-basic concepts.  Besides, Haskell is too mainstream.  No, really, even Carmack
-today writes in Haskell.  I tried OCaml, at first as a way of understanding
-Haskell concepts (admittedly this is a simpler language, which does all the
-same things more or less, but has better documentation).  But being a
-polygraphs at heart (my first education is in printing and publishing) I think
-that Haskell and similar ``math-like'' languages look disgusting.  So, it
-didn't stuck.  I tried Forth, then J.  I think that both are great languages.
-I'd really want to have enough time to dedicate to both.  Still pursuing my
-best-game-ever dream, I searched after knowledge-representation,
-knowledge-extraction and other knowledge-related things.  One day I posted a
-question to a Lisp thread in StackOverflow about a good database for natural
-language processing.  The following discussion convinced me that modern
-databases dramatically under-utilize the hardware capabilities in that how
-they expose data to applications.  This is how I become interested in graph
-databases.
-
-By looking into several graph database related languages, such as SPARQL, RDF,
-Gremlin and Cypher I came to conclusion that, well, none of that was any good.
-At all.  I looked into Neo4j, then whitedb, then of course, AllegroGraph, and
-there I found that the author of AG included Prolog as an option for writing
-queries.  This wasn't a real Prolog, but this instigated my interest in this
-language.  I also tried looking into Mercury, which is a Prolog-like language.
-It is to Prolog like Racket is to Scheme, meaning it's basically Prolog, but
-it has ML-like type machinery. It is also quite a bit faster, but it's a
-compiled language.  I just prefer things I can run in REPL to see what I'm
-doing.  Eventually, I stumbled upon GP2, which is another academic language
-for graphs.  It is very Forth-like, and, in my opinion is a great language,
-unfortunately yet not widely known.
+Besides being an excellent editor, Emacs introduced me to a bunch of
+programming languages, it inspired me to return to school, to read programming
+literature, to change my everyday life and the way I use my computer.  In the
+recent years this led to me becoming interested in natural language
+processing, machine learning, graph databases and history of programming.  My
+motivation for learning math is largely due to my interest in mathematical
+logic, which is due to the interest in type theory and formal semantics.  I
+know this will probably sound like I'm showing off (but isn't this the right
+place for it?), but I also believe that a good programmer must be familiar
+with these theories, and the more---the better.
 
 \mainmatter
 \chapter{Employment history}
@@ -325,6 +287,11 @@ Designed costumes (armors) for the game.
 \chapter{Education}
 \label{sec-4}
 
+This is my third attempt at post-high-school education.  I studied twice
+before, first time in the Printing Academy in Lvov.  Next, I studied in
+Bezalel in Jerusalem.  Today I am a first year student in Open University.
+The plan is to study mathematics, but I might defect in the future and
+try to compensate my bad grades with some programming courses.
 \chapter{Languages and Tools}
 \label{sec-5}
 Languages, listed by families, with my remarks on how well do I know them and
@@ -347,8 +314,8 @@ functional programming puritan kind of person, so Clojure isn't really my
 cup of tea.
 \item \textbf{ECMAScript} - you are probably surprised to hear that JavaScript is a\ldots{}
 well, Lisp.  Frankly, it's a very bad Lisp.  Regardless, it's been
-present on the last couple Lisp symposiums.  Brendan Eich claims it to be
-``inspired'' by Scheme.  So, we'll have to live with this taxonomy.  I
+present on the last couple of Lisp symposiums.  Brendan Eich claims it to
+be ``inspired'' by Scheme.  So, we'll have to live with this taxonomy.  I
 wrote quite a bit of JavaScript code at different times on different
 occasions.  I never liked it, even though I, probably, know the language
 very well, there's not much to really know well there, and nothing to be
@@ -357,23 +324,23 @@ proud of.
 ECMAScript designed by Mozilla and Macromedia, (later Adobe took over)
 around 2004-2006.  I'm talking of course about ActionScript 3.
 ActionScript 2 is simply ECMAScript 2 with a handful of proprietary
-extensions.  I've spent most of my programming career writting in
+extensions.  I've spent most of my programming career writing in
 ActionScript.  I might know the ins and outs of the language better than
-anyone else living and writting in this language today, but, just as
-with JavaScript, I just shrug whenever someone mentions it.
+anyone else living and writing in this language today, but, as with
+JavaScript, I just shrug whenever someone mentions it.
 \item \textbf{TypeScript} - A ``JavaScript with types''.  A toy language designed by
 Microsoft.  Basically a preprocessor macro, which adds ML-style types
 to JavaScript.  Very ad hoc and simplistic, yet I have to admit I wrote
 a project in this language.  A loader for arcade games for Smart TV.
 \end{enumerate}
 
-\item Fortran-esque
+\item FORTRAN-esque
 \begin{enumerate}
-\item \textbf{C} - I can read and, eventually, patch other's code.  I wrote a wrapper
+\item \textbf{C} - I can read and, eventually, patch others code.  I wrote a wrapper
 for C library, which required marginal knowledge of C language.  This
 whole family is certainly not my cup of coffee.
 \item \textbf{Java} - On several occasions I had to write some Java code.  Once it was
-Spring, another time it was JEE, but I only did maintainance work on old
+Spring, another time it was JEE, but I only did maintenance work on old
 large projects, fixing a minor bug here and there.
 \item \textbf{C\#} - About five years ago I wrote couple of plugins for FlashDevelop.
 At another time, I tried to extend MSBuild with some C\# code, but I
@@ -388,10 +355,10 @@ this language.  I've no interest in repeating the experiment.
 wrote few things in Python, mostly scripts to be used by others in
 automation of their daily tasks.  Builds, testing, producing reports etc.
 I even have an example project I completed as a test when I applied to
-Walla for the position of Python programmer in my GitHub repo.
+Walla for the position of Python programmer in \href{https://github.com/wvxvw?tab%3Drepositories}{my GitHub repo}.
 \item \textbf{PHP} - I encountered PHP few times in my life, but there wasn't a time
 when I didn't regret encountering it.
-\item I don't actually know Fortran.
+\item I don't actually know FORTRAN.
 \end{enumerate}
 
 \item ML-like
@@ -401,18 +368,17 @@ concepts of functional programming.  All I wrote in it were the exercises
 from Project Euler, nevertheless, I believe, I have a tolerable level of
 understanding.
 \item \textbf{Haskell} - I remember Douglas Crockford once said that today nobody
-talks about Java as programming language, instead everyone uses it as an
-attack target.  Haskell is my attack target.  It would be unfair to call
-this language dumb or simplistic.  After all, if you compare it to, say,
-JavaScript, it's a much, much better language.  Yet, JavaScript never
-promised the kinds of things Haskell does, and I am particularly upset
-about Haskell not only doesn't deliver on the promise, but doesn't even
-have a program for getting there.
+talks about Java as a programming language, instead everyone uses it as
+an attack vector.  Haskell is my attack vector.  It would be unfair to
+call this language dumb or simplistic.  After all, if you compare it to,
+say, JavaScript, it's a much, much better language.  Yet, JavaScript
+never promised the kinds of things Haskell does, and I am particularly
+upset about Haskell's overpromise and underdelivery.
 \item \textbf{Erlang} - Nice small language.  I had a chance encounter with it about
 four years ago, when I had to write a chat bot in it.  There are few
 awkward things about the language, but what really shines here is the
 abstraction of parallel execution.
-\item \textbf{Scala} - This is practially an OCaml's clone.  I have mixed feeling about
+\item \textbf{Scala} - This is practically an OCaml's clone.  I have mixed feeling about
 this language.  I never went past simple experiments with it, but I also
 can't really see a use case for it in my life.  If I wanted OCaml, I'd
 rather use that.  I've no use for the goodness of JRE.
@@ -458,7 +424,7 @@ computer without writing some shell script every now and then.
 \item \textbf{GP2} - This is a very unique language for graph processing, similar
 to Forth in that it's purely imperative and it's highly mathematical
 in that it's built around the concept of graph rewriting, specifically,
-double pushout.  If only I had the time\ldots{}
+double push-out.  If only I had the time\ldots{}
 \end{enumerate}
 
 \item Math and statistics
@@ -466,7 +432,7 @@ double pushout.  If only I had the time\ldots{}
 \item \textbf{Octave (Matlab)} - I never used Matlab, only Octave.  I did it for the
 course in machine learning.  I know enough of the language to do simple
 stuff for my math courses in the uni, but this is the kind of language
-where you need to be good at math and programming comes next.
+where you need to be good at math and programming comes second.
 \item \textbf{R (S)} - Surprisingly nice language.  I don't know much about it yet, but
 few times I needed graphs I used its libraries, and that looks very
 impressive.  I used R to work out the solutions for the assignments in
@@ -485,9 +451,10 @@ equations.
 popular on actionscript.org.  I wrote an XML parser, probably even more
 then once.  This also includes (maybe somewhat rudimentary XSLT, DTD and
 even RNG!).
-\item \textbf{JSON} - As with Haskell, I'm trying to convince peple that this does
-not achive the goal of what a markup language can do.
-\item \textbf{\TeX{}} - I'm a newbie, but I'm improving.
+\item \textbf{JSON} - As with Haskell, I'm trying to convince people that this does
+not achieve the goal of what a markup language can do.
+\item \textbf{\TeX{}} - I'm a newbie, but I'm improving.  Obviously, this resume was set
+using \LaTeX{} and Emacs' awesome Org mode.
 \item \textbf{Info} - I wrote several info pages, no kidding!
 \item \textbf{Man} - When Adobe donated Flex to Apache I wrote Man pages for the
 compiler and other command-line tools from SDK, but they were never
