--- a/oleg-sivokon.tex
+++ b/oleg-sivokon.tex
@@ -1,4 +1,4 @@
-% Created 2014-12-08 Mon 09:35
+% Created 2014-12-08 Mon 22:24
 \documentclass[oneside]{memoir}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -400,10 +400,10 @@ I'm falling in love with this language.
 \item \textbf{Mercury} - A more modern Prolog, compiled, with ML-like type system.
 An interesting language, which I tried once and would want to try more,
 if a possibility presents itself.
-\item \textbf{SQL} - Yes, SQL isn't a logical programming language, but it is so 
+\item \textbf{SQL} - Yes, SQL isn't a logic programming language, but it is so 
 closely related to Prolog, that I felt it would be appropriate to put it
-here.  I'm not a pro.  I had to use SQL with a handful of databases,
-but there wasn't much to write home about.
+here.  I'm not a pro.  I had to use SQL with a handful of databases, but
+there wasn't much to write home about.
 \end{enumerate}
 
 \item Miscellaneous
